# crius_1280

./: .gitignore  CMakeLists.txt  Doxyfile  README.md  aarch64_toolchain.cmake  frame0.raw  i686-w64-mingw32_toolchain.cmake  setup.sh  tdd.sh
camera_sdk/: DALProxy1280_12USB.h  libusb-1.0.so.0.2.0
camera_sdk/linux_armv8hf/: libDALProxy1280_12USB.so.2
camera_sdk/windows_x86/: DALProxy1280_12USB.h  DALProxy1280_12USB_x64.lib  DALProxySwitchUSBDef.h
inc/: DALProxy1280_12USB.h  DALProxy1280_12USBDef.h
include/: DALProxy1280_12USB.h
src/: CMakeLists.txt  calibrationExample.cpp  exampleSmartIR.cpp  main.c  rawtopgm.c
src/camera_handler/: CMakeLists.txt  camera_handler.c  camera_handler.h  camera_test_wrap.c  camera_test_wrap.h
src/pgm/: CMakeLists.txt  pgm.c  pgm.h
src/pyprog/: cam.py  cam_view.py  demo.py  image.pgm  main.c  requirements.txt  test_cam.py
src/pyprog/shared/: libDALProxy1280_12USB.so.2  libDALProxy1280_12USB.so.2.3  libDALProxy1280_12USB.so.2.3.0
tests/: CMakeLists.txt
tests/camera_handler/: CMakeLists.txt  test_camera_handler.c
tests/pgm/: CMakeLists.txt  test_pgm.c
